--- a/css/style.scss
+++ b/css/style.scss
@@ -169,7 +169,7 @@ iframe {
 
 .content-4 {
     display: grid;
-    grid-template-columns: 4.5rem 38rem 38rem 38rem;
+    grid-template-columns: 4rem 38rem 38rem 38rem;
     grid-template-rows: 5rem 17rem;
     width: 40rem;
     .fill {
@@ -200,6 +200,10 @@ iframe {
 
 #links {
     padding-left: 5rem;
+    text-decoration: underline;
+}
+
+#links-2 {
     text-decoration: underline;
 }
 
